<resources>
    <string name="app_version_format">Wersja %s</string>
    <string name="app_name">Auto Stop Race</string>
    <string name="app_name_year">Auto Stop Race 2019</string>
    <string name="error_unknown">Ojojoj, coś poszło nie tak, spróbuj ponownie za chwilę…</string>
    <string name="error_404">Coś się popsuło. Spróbuj ponownie później…</string>
    <string name="error_500">Błąd połączenia z serwerem</string>
    <string name="error_403">Konto nie zostało aktywowane, aktywuj je za pomocą linka wysłanego w mailu.</string>
    <string name="msg_empty_location_records_list">Brak lokalizacji do wyświetlenia.</string>
    <string name="hint_email">Adres e-mail</string>
    <string name="hint_password">Hasło</string>
    <string name="action_login">Zaloguj</string>
    <string name="msg_go_to_login">Przejdź do logowania</string>
    <string name="error_401">Niepoprawne dane logowania lub nieaktywne konto</string>
    <string name="msg_logout_success">Wylogowano</string>
    <string name="msg_logout">Wyloguj</string>
    <string name="error_502">Spróbuj ponownie za chwilę.</string>
    <string name="error_400">Nieprawidłowe żądanie</string>
    <string name="error_no_internet_connection">Brak połączenia z Internetem.</string>
    <string name="hint_message">Opcjonalna relacja (max 160 znaków)</string>
    <string name="title_activity_login">Logowanie</string>
    <string name="title_post_location">Wysyłanie lokalizacji</string>
    <string name="error_session_expired">Sesja wygasła, zaloguj się ponownie</string>
    <string name="msg_show_contact">Kontakt do organizatorów</string>
    <string name="msg_login_info">Zaloguj się za pomocą danych ustalonych przy aktywacji swojego konta. Instrukcje znajdują się w mailu od organizatorów.</string>
    <string name="title_logging">Logowanie…</string>
    <string name="please_wait">Proszę czekać.</string>
    <string name="error_invalid_email">Niepoprawny adres email.</string>
    <string name="error_empty_pass">Wpisz hasło.</string>
    <string name="error_timeout">Serwer zbyt długo nie odpowiada, spróbuj ponownie za chwilę.</string>
    <string name="title_drawer_default">Niezalogowany</string>
    <string name="subtitle_drawer_default">Auto Stop Race</string>
    <string name="drawer_open">Otwórz menu</string>
    <string name="drawer_close">Zamknij menu</string>
    <string name="title_my_team_locations">Lokalizacje mojego teamu</string>
    <string name="title_activity_teams">Mapa lokalizacji</string>
    <string name="title_activity_campus">Mapa campingu</string>
    <string name="title_activity_schedule">Harmonogram wydarzeń</string>
    <string name="title_activity_competitions">Konkursy</string>
    <string name="title_activity_phrasebook">Krótkie rozmówki</string>
    <string name="msg_login_to_show_locations">Zaloguj się, żeby zobaczyć lokalizacje swojego teamu</string>
    <string name="title_activity_contact">Kontakt do organizatorów</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="title_activity_about">O aplikacji</string>
    <string name="pref_main_settings">Główne</string>
    <string name="pref_logout">Wyloguj się</string>
    <string name="pref_logout_summary">Zalogowany jako %1$s</string>
    <string name="pref_logout_summary_not_logged">Niezalogowany</string>
    <string name="msg_logout_question">Czy na pewno chcesz się wylogować?</string>
    <string name="msg_logout_info">Wszystkie lokalizacje niewysłane na serwer zostaną usunięte.</string>
    <string name="msg_cancel">Anuluj</string>
    <string name="menu_help">Pomoc</string>
    <string name="help">Pomoc</string>
    <string name="ok">OK</string>
    <string name="action_save_and_send">Zapisz i wyślij</string>
    <string name="msg_your_location">Twoja przybliżona lokalizacja:</string>
    <string name="msg_establishing_approximate_location">Trwa ustalanie przybliżonej lokalizacji…</string>
    <string name="saved_location">Zapisano lokalizację</string>
    <string name="authors"><b>Autorzy:</b>\n- Szymon Kozak \n- Bartłomiej Korpus \n- Rafał Naniewicz (jakby co szuka dziewczyny, <a href="mailto:randki.naniewicz@gmail.com">randki.naniewicz@gmail.com</a>)\n - Michał Zając</string>
    <string name="warning_no_fine_location_permission">Brak uprawnień dostępu do lokalizacji.</string>
    <string name="settings">Ustawienia</string>
    <string name="change_settings">Zmień</string>
    <string name="warning_inadequate_location_settings">Nieodpowiednie ustawienia lokalizacji.</string>
    <string name="action_share">Udostępnij</string>
    <string name="action_licenses">Licencje Open Source</string>
    <string name="msg_rate_app_question">Spodobała Ci się ta aplikacja?</string>
    <string name="msg_rate_app">Oceń ją w sklepie Google Play!</string>
    <string name="action_rate">Oceń aplikację</string>
    <string name="msg_wait_for_established_location">Poczekaj aż ustalimy Twoją lokalizację…</string>
    <string name="msg_searching_for_aproximate_address">Trwa ustalanie przybliżonej lokalizacji…</string>
    <string name="description_location_record_state">Stan synchronizacji rekordu z serwerem</string>
    <string name="description_unknown_cuntry_code">Kod kraju nieznany</string>
    <string name="accuracy_label">(+/- %1$sm)</string>
    <string name="action_refresh">Odśwież</string>
    <string name="label_sponsor">Partnerem edycji 2018 jest m.in.:</string>
    <string name="warning_inadequeate_settings">Błąd, prawdopodobnie włączony tryb samolotowy.</string>
    <string name="forgotten_password">Przypomnij mi hasło</string>
    <string name="msg_reset_pass_email_sent">Email zawierający dalsze instrukcje został wysłany</string>
    <string name="hint_enter_team_number">Wpisz numer teamu…</string>
    <string name="msg_last_location_record_message">Ostatnia wiadomość:</string>
    <string name="msg_last_location_record_received">Ostatnie zameldowanie: </string>
    <string name="msg_last_location_record_received_adapter">Ostatnie zameldowanie: %1$s</string>
    <string name="msg_processing_request">Czekaj, Trwa przetwarzanie żądania…</string>
    <string name="find_team">Znajdź team</string>
    <string name="dest_lang">Język docelowy:</string>
    <string name="search">Szukaj</string>
    <string name="search_hint">Szukane wyrażenie…</string>
    <string name="no_results">Brak wyników.</string>
    <string name="error_invalid_team_id">Wprowadzony identyfikator teamu jest niepoprawny!</string>
    <string name="msg_no_location_records_to_display">Brak lokalizacji do wyświetlenia.</string>
    <string name="msg_location_record_received">Zameldowano:</string>
    <string name="error_team_not_found">Nie znaleziono teamu.</string>
    <string name="team">team</string>
    <string name="description_action_icon">Ikona akcji</string>
    <string name="error_action_cant_be_handled">Akcja nie mogła zostać obsłużona…</string>
    <string name="title_activity_licenses">Licencje Open Source</string>
    <string name="title_activity_partners">Partnerzy</string>
    <string name="url_map">mapa.autostoprace.pl</string>
    <string name="action_share_locations">Udostępnij lokacje</string>
    <string name="msg_teams_locations">Lokalizacje teamów</string>
    <string name="msg_team_locations">"Lokalizacje teamu %1$s"</string>
    <string name="description_logo_asr">Logo Auto Stop Race</string>
    <string name="description_sponsor_logo">Logo sponsora</string>
    <string name="my_team_locations_map">Mapa zameldowań teamu</string>
    <string name="add_photo">Dodaj zdjęcie</string>
    <string name="camera">Zrób zdjęcie</string>
    <string name="gallery">Wgraj zdjęcie z galerii</string>
    <string name="action_cancel">Anuluj</string>
    <string name="error_while_taking_photo">Wystąpił błąd, zdjęcie nie mogło zostać załączone.</string>
    <string name="shortcut_post_long_label">Dodaj lokalizację</string>
    <string name="shortcut_post_short_label">Dodaj </string>
    <string name="shortcut_locations_map_long_label">Mapa lokalizacji</string>
    <string name="shortcut_locations_map_short_label">Mapa</string>
    <string name="shortcut_phrasebook_long_label">Rozmówki</string>
    <string name="shortcut_phrasebook_short_label">Rozmówki</string>
    <string name="msg_show_locations_map">Mapa lokalizacji</string>
    <string name="shortcut_post_disabled_label">Musisz być zalogowany aby dodać lokalizację</string>
    <string name="header_partners_strategic">Partnerzy Strategiczni</string>
    <string name="header_partners_gold">Partnerzy Złoci</string>
    <string name="header_partners_silver">Partnerzy Srebrni</string>
    <string name="header_partners_brown">Partnerzy Brazowi</string>
    <string name="header_partners_supporting">Partnerzy Wspierający</string>
    <string name="header_partners_honorary">Partnerzy Honorowi</string>
    <string name="header_partners_technological">Partnerzy Techniczni</string>
    <string name="header_partners_media">Mówią o nas</string>
    <string name="error_while_loading_photo">Podczas ładowania zdjęcia wystąpił błąd.</string>
    <string name="msg_press_to_see_the_photo">Dotknij, aby zobaczyć zdjęcie</string>
    <string name="crop_image_menu_crop">Przytnij</string>
    <string name="bottom_menu_map">Mapa</string>
    <string name="bottom_menu_wall">Tablica</string>
    <string name="general_notification_channel_name">Ogólne</string>
    <string name="error_data_load_failed">Nie udało się załadować danych. Sprawdź swoje połączenie internetowe.</string>
    <string name="browser_not_found">Nie znaleziono przeglądarki umożliwiającej otwarcie linku</string>
    <string name="error_cannot_load_competitions">Nie udało się załadować listy konkursów, sprawdź swoje połączenie internetowe i spróbuj ponownie.</string>
    <string name="msg_empty_state_competitions">Chwilowo brak konkursów…</string>
</resources>
