<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/activities_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main"
            android:checked="false"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/title_my_team_locations"/>
        <item
            android:id="@+id/activity_teams"
            android:checked="false"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/title_activity_teams"/>
        <item
            android:id="@+id/activity_campus"
            android:checked="false"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/title_activity_campus"/>
        <item
            android:id="@+id/activity_phrasebook"
            android:checked="false"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/title_activity_phrasebook"/>
        <item
            android:id="@+id/activity_contact"
            android:checked="false"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/title_activity_contact"/>
        <item
            android:id="@+id/activity_partners"
            android:checked="false"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/title_activity_partners"/>
    </group>
    <group
        android:id="@+id/others_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/activity_settings"
            android:checked="false"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_activity_settings"/>
        <item
            android:id="@+id/activity_about"
            android:checked="false"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/title_activity_about"/>
    </group>
</menu>