<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:background="@color/rate_app_background"
    android:gravity="bottom">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_small"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingRight="@dimen/margin_small"
        android:paddingStart="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_medium"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:lineSpacingExtra="10dp"
            android:text="@string/msg_rate_app_question"
            android:textSize="18dp"
            android:textStyle="bold"
            tools:ignore="SpUsage"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView"
            android:text="@string/msg_rate_app"
            android:textSize="16dp"
            tools:ignore="SpUsage"/>

        <Button
            android:id="@+id/btn_go_to_store"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/action_rate"
            android:textColor="@color/accent"/>

    </RelativeLayout>

</RelativeLayout>