<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_splash_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:src="@drawable/bg"
        tools:ignore="ContentDescription"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_splash_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:paddingTop="32dp"
                android:scaleType="centerInside"
                tools:src="@drawable/logo_asr"
                android:contentDescription="@string/description_logo_asr"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_sponsor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/default_padding"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:gravity="center"
                        android:paddingBottom="32dp"
                        android:paddingTop="16dp"
                        android:text="@string/label_sponsor"
                        android:textColor="@color/primary_text"
                        android:textSize="13sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/iv_sponsor_logo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"
                        android:paddingBottom="32dp"
                        android:paddingTop="0dp"
                        tools:src="@drawable/logo_partybusy"
                        android:contentDescription="@string/description_sponsor_logo"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>