<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/toolbar"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/msg_your_location"/>

                    <TextView
                        android:id="@+id/tv_accuracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="(+/- 50m)"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:alpha="0.75"
                        android:scaleType="fitStart"
                        android:src="@drawable/ic_my_location_black_24dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_current_location_adress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/msg_establishing_approximate_location"
                            android:textColor="@color/primary_text"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tv_current_location_cords"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/secondary_text"
                            android:textSize="12sp"
                            android:visibility="gone"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/shadow_standard"/>

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="top|left"
                android:hint="@string/hint_message"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="160"
                android:padding="@dimen/default_padding"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>